--- a/roles/raspbian-up/tasks/main.yml
+++ b/roles/raspbian-up/tasks/main.yml
@@ -18,17 +18,20 @@
     line: "127.0.1.1\t{{ inventory_hostname }}"
     path: /etc/hosts
     regexp: '^127.0.1.1\t'
-- name: remove MacOS artifacts from /boot directory
+- name: remove macos artifacts from /boot directory
   file:
     path: /boot/.Spotlight-V100
     state: absent
 - name: update and upgrade all existing packages
   apt:
+    force_apt_get: yes
     only_upgrade: yes
     update_cache: yes
     upgrade: yes
+  notify: reboot system
 - name: remove obsolete or unused packages
   apt:
     autoclean: yes
     autoremove: yes
+    force_apt_get: yes
 - meta: flush_handlers
