--- a/roles/docker-up/tasks/main.yml
+++ b/roles/docker-up/tasks/main.yml
@@ -1,31 +1,41 @@
 ---
 - name: enable apt repositories using HTTPS
   apt:
+    force_apt_get: yes
     name:
       - apt-transport-https
       - ca-certificates
       - curl
       - software-properties-common
     update_cache: yes
-- name: add apt-key for Docker
+- name: add apt-key for docker
   apt_key:
-    id: 8D81803C0EBFCD88
-    url: https://download.docker.com/linux/ubuntu/gpg
-- name: add apt-repository for Docker CE
+    id: "{{ docker.apt_key.id }}"
+    url: "{{ docker.apt_key.url }}"
+- name: add apt-repository for docker
   apt_repository:
-    repo: "deb https://download.docker.com/linux/ubuntu {{ansible_lsb.codename}} stable"
-- name: install Docker
+    repo: "{{ docker.apt_repository.repo }}"
+- name: install docker
   apt:
+    force_apt_get: yes
     name:
-      - "docker-ce=5:18.09.8~3-0~ubuntu-{{ansible_lsb.codename}}"
+      - containerd.io
+      - "{{ docker.apt.name }}"
     update_cache: yes
   notify: restart docker
-- name: copy Docker configuration
+- name: hold docker updates
+  dpkg_selections:
+    name: "{{ item }}"
+    selection: hold
+  with_items:
+    - containerd.io
+    - docker-ce
+- name: write docker daemon configuration
   copy:
     dest: /etc/docker/daemon.json
     src: daemon.json
   notify: restart docker
-- name: make Docker configuration directory
+- name: make docker service configuration directory
   file:
     path: /etc/systemd/system/docker.service.d
     state: directory
