--- a/roles/k3s-master-up/handlers/main.yml
+++ b/roles/k3s-master-up/handlers/main.yml
@@ -1,13 +1,18 @@
 ---
-- name: copy kubeconfig
+- name: write k3s config
   local_action:
     module: copy
-    dest: kubeconfig
-    src: kubeconfig.bak
-- name: edit kubeconfig
+    dest: k3s-config.yml
+    src: k3s-config.yml.bak
+  run_once: yes
+  vars:
+    ansible_become: no
+- name: edit k3s config
   local_action:
     backrefs: yes
     line: '\g<1>{{ ansible_default_ipv4.address }}\g<2>'
     module: lineinfile
-    path: kubeconfig
+    path: k3s-config.yml
     regexp: '^(\s+server:\s+https?://)(?:[a-zA-Z0-9.-]+)([\W$].*)$'
+  vars:
+    ansible_become: no
