--- a/roles/k8s-master-up/tasks/main.yml
+++ b/roles/k8s-master-up/tasks/main.yml
@@ -1,13 +1,27 @@
 ---
-- name: init kubeadm
+- name: kubeadm init
   command: "kubeadm init --apiserver-advertise-address={{ ansible_default_ipv4.address }} --pod-network-cidr=10.244.0.0/16"
-- name: install Flannel pod network
-  command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/v0.11.0/Documentation/kube-flannel.yml
-- name: generate join command
-  command: kubeadm token create --print-join-command
-  register: join_command
-- name: Copy join command to local file
+  args:
+    creates: /etc/kubernetes/kubelet.conf
+  run_once: yes
+- name: fetch k8s config
+  fetch:
+    dest: k8s-config.yml
+    flat: yes
+    src: /etc/kubernetes/admin.conf
+  run_once: yes
+- name: apply flannel
+  shell: KUBECONFIG=/etc/kubernetes/admin.conf kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+  run_once: yes
+- name: register k8s token
+  shell: kubeadm token list | awk 'NR == 2 { print $1 }'
+  register: k8s_token
+  run_once: yes
+- name: save k8s token
   local_action:
     module: copy
-    content: "{{ join_command.stdout_lines[0] }}"
-    dest: kubeadm-join.sh
+    content: "{{ k8s_token.stdout }}\n"
+    dest: k8s-token
+  run_once: yes
+  vars:
+    ansible_become: no
