--- a/roles/raspbian-up/tasks/main.yml
+++ b/roles/raspbian-up/tasks/main.yml
@@ -4,10 +4,11 @@
     content: "dwc_otg.lpm_enable=0 console=serial0,115200 console=tty1 root=/dev/mmcblk0p2 rootfstype=ext4 elevator=deadline fsck.repair=yes rootwait cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory\n"
     dest: /boot/cmdline.txt
   notify: reboot system
-- name: set /boot/config.txt
-  copy:
-    src: config.txt
-    dest: /boot/config.txt
+- name: set video memory to 16mb
+  lineinfile:
+    line: "gpu_mem = 16"
+    path: /boot/config.txt
+    regexp: '^\s*gpu_mem\s*=\s*'
   notify: reboot system
 - name: set hostname
   hostname:
