--- a/roles/ubuntu-up/tasks/main.yml
+++ b/roles/ubuntu-up/tasks/main.yml
@@ -11,6 +11,12 @@
     path: /boot/firmware/config.txt
     regexp: '^\s*gpu_mem\s*=\s*'
   notify: reboot system
+- name: program usb boot mode
+  lineinfile:
+    line: "program_usb_boot_mode = 1"
+    path: /boot/firmware/config.txt
+    regexp: '^\s*program_usb_boot_mode\s*=\s*'
+  notify: reboot system
 - name: set hostname
   hostname:
     name: "{{ inventory_hostname }}"
