--- a/roles/k3s-worker-up/tasks/main.yml
+++ b/roles/k3s-worker-up/tasks/main.yml
@@ -1,18 +1,22 @@
 ---
 - name: register k3s token
-  local_action: 'command cat k3s-token'
+  local_action: 'command cat build/k3s-token'
   register: k3s_token
   vars:
     ansible_become: no
-- name: register k3s URL
+- name: register k3s url
   local_action:
-    module: 'command sed -n -E -e "s/^ +server: +(.*)$/\1/p" k3s-config.yml'
+    module: 'command sed -n -E -e "s/^ +server: +(.*)$/\1/p" build/k3s-config.yml'
     warn: no
   register: k3s_url
   vars:
     ansible_become: no
 - name: install k3s agent
-  shell: "curl -fsL https://get.k3s.io | INSTALL_K3S_VERSION='{{ install_k3s_version }}' K3S_TOKEN='{{ k3s_token.stdout }}' K3S_URL='{{ k3s_url.stdout }}' sh -"
+  shell: |
+    export INSTALL_K3S_VERSION='{{ install_k3s_version }}'
+    export K3S_TOKEN='{{ k3s_token.stdout }}'
+    export K3S_URL='{{ k3s_url.stdout }}'
+    curl -fsL https://get.k3s.io | sh -s agent --docker
   args:
     creates: /usr/local/bin/k3s-agent-uninstall.sh
     warn: no
