--- a/inventory.yml
+++ b/inventory.yml
@@ -35,13 +35,15 @@ all:
       vars:
         docker:
           apt:
-            force_apt_get: yes
-            name: "docker-ce"
+            name:
+              - containerd.io
+              - docker-ce
+              - docker-ce-cli
           apt_key:
             id: 8D81803C0EBFCD88
             url: "https://download.docker.com/linux/raspbian/gpg"
           apt_repository:
-            repo: "deb [arch=armhf] https://download.docker.com/linux/raspbian stretch edge"
+            repo: "deb https://download.docker.com/linux/raspbian {{ ansible_lsb.codename }} stable"
     ubuntu_nodes:
       hosts:
         raspi1: {}
