--- a/roles/docker-down/tasks/main.yml
+++ b/roles/docker-down/tasks/main.yml
@@ -1,23 +1,11 @@
 ---
 - name: unhold docker updates
   dpkg_selections:
-    name: "{{ item }}"
+    name: "{{ item.split('=')[0] }}"
     selection: deinstall
-  with_items:
-    - containerd.io
-    - docker-ce
+  with_items: "{{ docker.apt.name }}"
 - name: uninstall docker
   apt:
     force_apt_get: yes
-    name:
-      - containerd.io
-      - docker-ce
+    name: "{{ docker.apt.name }}"
     state: absent
-- name: remove docker daemon configuration
-  command: rm /etc/docker/daemon.json
-  args:
-    removes: /etc/docker/daemon.json
-- name: remove docker service directory
-  command: rm -r /etc/systemd/system/docker.service.d
-  args:
-    removes: /etc/systemd/system/docker.service.d
