--- a/roles/docker-up/defaults/main.yml
+++ b/roles/docker-up/defaults/main.yml
@@ -2,8 +2,10 @@
 ansible_become: yes
 docker:
   apt:
-    force_apt_get: yes
-    name: "docker-ce=18.06.3~ce~3-0~{{ ansible_lsb.id.lower() }}"
+    name:
+      - containerd.io
+      - docker-ce
+      - docker-ce-cli
   apt_key:
     id: 8D81803C0EBFCD88
     url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
