--- a/roles/k8s-worker-up/tasks/main.yml
+++ b/roles/k8s-worker-up/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: register k8s token
-  local_action: 'command cat k8s-token'
+  local_action: 'command cat build/k8s-token'
   register: k8s_token
   vars:
     ansible_become: no
 - name: register k8s address
   local_action:
-    module: 'command sed -n -E -e "s/^ +server: +https?:\/\/([^\/]+)$/\1/p" k8s-config.yml'
+    module: 'command sed -n -E -e "s/^ +server: +https?:\/\/([^\/]+)$/\1/p" build/k8s-config.yml'
     warn: no
   register: k8s_address
   vars:
