--- a/roles/ubuntu-up/tasks/main.yml
+++ b/roles/ubuntu-up/tasks/main.yml
@@ -29,9 +29,9 @@
   notify: update avahi-daemon
 - name: edit /etc/hosts
   lineinfile:
-    line: "127.0.1.1\t{{ inventory_hostname }}"
+    line: "{{ ansible_default_ipv4.address }}\t{{ inventory_hostname }}"
     path: /etc/hosts
-    regexp: '^127.0.1.1\t'
+    regexp: '^{{ ansible_default_ipv4.address }}\s+'
 - name: update and upgrade all existing packages
   apt:
     force_apt_get: yes
