--- a/roles/docker-up/defaults/main.yml
+++ b/roles/docker-up/defaults/main.yml
@@ -1,13 +1,7 @@
 ---
 ansible_become: yes
-docker:
-  apt:
-    name:
-      - containerd.io
-      - docker-ce
-      - docker-ce-cli
-  apt_key:
-    id: 8D81803C0EBFCD88
-    url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
-  apt_repository:
-    repo: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename }} stable"
+containerd_version: 1.2.6-3
+docker_apt_key_id: 8D81803C0EBFCD88
+docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
+docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename }} stable"
+docker_version: "5:18.09.9~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename }}"
