--- a/inventory.yml
+++ b/inventory.yml
@@ -51,3 +51,4 @@ all:
     k3s_version: v0.9.0-rc2 # https://github.com/rancher/k3s/releases
     k8s_version: 1.15.3-00
     kuberneted_cni_version: 0.7.5-00
+    proxy_url: http://192.168.71.1:3128/ # use an IP address, not a hostname!
