--- a/roles/docker-up/defaults/main.yml
+++ b/roles/docker-up/defaults/main.yml
@@ -4,4 +4,5 @@ containerd_version: 1.2.6-3
 docker_apt_key_id: 8D81803C0EBFCD88
 docker_apt_key_url: "https://download.docker.com/linux/{{ ansible_lsb.id.lower() }}/gpg"
 docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_lsb.id.lower() }} {{ ansible_lsb.codename }} stable"
+docker_registry_mirror_url: ''
 docker_version: "5:18.09.9~3-0~{{ ansible_lsb.id.lower() }}-{{ ansible_lsb.codename }}"
