--- a/roles/k8s-commons-down/tasks/main.yml
+++ b/roles/k8s-commons-down/tasks/main.yml
@@ -22,8 +22,8 @@
       - kubernetes-cni
     state: absent
 - name: uninstall docker daemon configuration
-  file:
-    path: /etc/docker/daemon.json
-    state: absent
+  template:
+    dest: /etc/docker/daemon.json
+    src: daemon.json.jinja
   notify: restart docker
 - meta: flush_handlers
