--- a/roles/docker-up/tasks/main.yml
+++ b/roles/docker-up/tasks/main.yml
@@ -34,4 +34,12 @@
     dest: /etc/docker/daemon.json
     src: daemon.json.jinja
   notify: restart docker
+- name: update environment variables
+  lineinfile:
+    insertafter: '^\s*[\s*Service\s*]'
+    line: "Environment='HTTP_PROXY={{ proxy_url }}' 'HTTPS_PROXY={{ proxy_url }}' 'NO_PROXY={{ no_proxy }}'"
+    path: /etc/systemd/system/multi-user.target.wants/docker.service
+    regexp: '^\s*Environment\s*=\s*'
+  notify: restart docker
+  when: proxy_url != ''
 - meta: flush_handlers
