--- a/roles/docker-up/handlers/main.yml
+++ b/roles/docker-up/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: apt-get update
+  apt:
+    force_apt_get: yes
+    update_cache: yes
 - name: restart docker
   systemd:
     daemon_reload: yes
