--- a/roles/k8s-master-up/tasks/main.yml
+++ b/roles/k8s-master-up/tasks/main.yml
@@ -11,7 +11,7 @@
     src: /etc/kubernetes/admin.conf
   run_once: yes
 - name: apply flannel
-  shell: KUBECONFIG=/etc/kubernetes/admin.conf kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+  shell: kubectl --kubeconfig=/etc/kubernetes/admin.conf apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
   run_once: yes
 - name: register k8s token
   shell: kubeadm token list | awk 'NR == 2 { print $1 }'
