--- a/roles/proxies-up/defaults/main.yml
+++ b/roles/proxies-up/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 ansible_become: yes
-no_proxy: localhost,127.0.0.0/8,*.local
+no_proxy: 10.0.0.0/8,127.0.0.0/8,192.168.0.0/16,*.local,localhost
 proxy_url: ''
