Improves lineinfile edits.

--- a/roles/docker-up/tasks/main.yml
+++ b/roles/docker-up/tasks/main.yml
@@ -38,7 +38,7 @@
   notify: restart docker
 - name: update environment variables
   lineinfile:
-    insertafter: '^\s*[\s*Service\s*]'
+    insertafter: '^\s*\[\s*Service\s*\]'
     line: "Environment='HTTP_PROXY={{ proxy_url }}' 'HTTPS_PROXY={{ proxy_url }}' 'NO_PROXY={{ no_proxy }}'"
     path: /lib/systemd/system/docker.service
     regexp: '^\s*Environment\s*=\s*'
