--- a/roles/docker-up/tasks/main.yml
+++ b/roles/docker-up/tasks/main.yml
@@ -11,6 +11,7 @@
 - name: install docker
   apt:
     force_apt_get: yes
+    install_recommends: no
     name:
       - "containerd.io={{ containerd_version }}"
       - "docker-ce={{ docker_version }}"
