--- a/roles/debian-up/tasks/main.yml
+++ b/roles/debian-up/tasks/main.yml
@@ -24,7 +24,7 @@
 - name: add apt proxies
   template:
     dest: /etc/apt/apt.conf.d/95proxies
-    src: 95proxies
+    src: 95proxies.j2
   when: proxy_url != ''
 - name: update and upgrade all existing packages
   apt:
@@ -54,7 +54,7 @@
   notify: reload avahi-daemon
 - name: edit /etc/hosts
   lineinfile:
-    line: "{{ ansible_default_ipv4.address }}\t{{ inventory_hostname }}"
+    line: "127.0.1.1\t{{ inventory_hostname }}"
     path: /etc/hosts
-    regexp: '^{{ ansible_default_ipv4.address }}\s+'
+    regexp: '^127.0.1.1\s+'
 - meta: flush_handlers
