--- a/roles/k3s-master-down/tasks/main.yml
+++ b/roles/k3s-master-down/tasks/main.yml
@@ -8,7 +8,7 @@
     module: shell
     _raw_params: |
       export KUBECONFIG=build/k3s-config.yml
-      kubectl drain {{ inventory_hostname }} --delete-local-data --force --ignore-daemonsets
+      kubectl drain {{ inventory_hostname }} --delete-local-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
       kubectl delete node {{ inventory_hostname }}
     removes: build/k3s-config.yml # it doesn't, but it prevents this step from running if it is
   vars:
